# Ekstrastats

./: .gitignore  Procfile  README.md  build.sh  manage.py  pyproject.toml  requirements  requirements.txt  runtime.txt
Ekstrastats/: asgi.py  settings.py  urls.py  wsgi.py
Ekstrastats/settings/: settings.py
app/: admin.py  contex_processors.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_game_imported_at_alter_game_imported_from_and_more.py  0003_player_birth_date.py  0004_game_referee_game_round_goal_minute_extra_and_more.py  0005_team_overview_team_website_alter_game_imported_at_and_more.py  0006_team_stadium_photo.py
app/static/app/: main.css
app/static/css/: analysis.css  main.css
app/templates/app/: _sidebar.html  analysis.html  analysis_pois.html  base.html  home.html  player.html  round.html  statistics.html  table.html  team.html  team_stats.html
app/templatetags/: custom_filters.py
app/tests/: factories.py  test_models.py  test_table.py  test_views.py
app/utils/: general.py  statistics.py  table.py
data_feeders/: games_goals_api.py  players_api.py  teams_api.py
staticfiles/app/: main.css
